fix page add spacing on at the bottom of image

--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ h3 a:hover{
 .main-wrap{
 	height: 100%;
 }
-.intro p{
+.intro{
 	margin-top: 50px;
 }
 
